--- a/1template/package.json
+++ b/1template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "tims-bits",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -22,12 +22,18 @@
   ],
   "author": "Timothy Coleman",
   "license": "",
-  "homepage": "",
+  "homepage": "http://unegma.com",
   "dependencies": {
+    "async": "^2.0.1",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "lodash": "^3.8.0"
+    "express-ejs-layouts": "^2.2.0",
+    "lodash": "^4.15.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0"
   }
 }
