--- a/1template/bower.json
+++ b/1template/bower.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "jquery": "~3.1.0",
     "angular": "~1.5.8",
-    "lodash": "~4.15.0"
+    "lodash": "~4.15.0",
+    "font-awesome": "fontawesome#~4.6.3"
   },
   "resolutions": {
     "angular": "~1.5.8"
