--- a/1template/bower.json
+++ b/1template/bower.json
@@ -1,10 +1,12 @@
 {
   "name": "tims-bits",
   "dependencies": {
-    "jquery": "~3.1.0",
     "angular": "~1.5.8",
+    "font-awesome": "fontawesome#~4.6.3",
+    "jquery": "~3.1.0",
     "lodash": "~4.15.0",
-    "font-awesome": "fontawesome#~4.6.3"
+    "normalize-css": "^4.2.0",
+    "Skeleton-Sass": "skeleton-scss#*"
   },
   "resolutions": {
     "angular": "~1.5.8"
