--- a/1template/package.json
+++ b/1template/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.15.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.16.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.4",
