--- a/1template/bower.json
+++ b/1template/bower.json
@@ -6,7 +6,11 @@
     "jquery": "~3.1.0",
     "lodash": "~4.15.0",
     "normalize-css": "^4.2.0",
-    "Skeleton-Sass": "skeleton-scss#*"
+    "Skeleton-Sass": "skeleton-scss#*",
+    "moment": "^2.15.0",
+    "angular-ui-router": "^0.3.1",
+    "ng-device-detector": "^3.0.1",
+    "re-tree": "^0.0.2"
   },
   "resolutions": {
     "angular": "~1.5.8"
