--- a/1template/package.json
+++ b/1template/package.json
@@ -25,6 +25,7 @@
   "homepage": "http://unegma.com",
   "dependencies": {
     "async": "^2.0.1",
+    "dotenv": "^2.0.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
