Add passport modules to passport-auth

--- a/passport-auth/package.json
+++ b/passport-auth/package.json
@@ -29,7 +29,9 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
-    "lodash": "^4.15.0"
+    "lodash": "^4.15.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.16.0",
