Add database connection

--- a/database/.env.sample
+++ b/database/.env.sample
@@ -1,2 +1,4 @@
-DB_HOST=localhost
 TEST_VAR=testvar
+DATABASE_URI=mongodb://localhost/tims-bits
+TEST_DATABASE_URI=mongodb://localhost/tims-bits-test
+NODE_ENV=local
